--- a/charts/forms-flow-ai/templates/secret.yaml
+++ b/charts/forms-flow-ai/templates/secret.yaml
@@ -5,8 +5,8 @@ metadata:
     app: "{{ .Chart.Name }}"
   name: "{{ .Chart.Name }}"
 stringData:
-  BPM_CLIENT_ID: "{{ .Values.bpm_keycloak_clientid }}"
-  BPM_CLIENT_SECRET: "{{ .Values.bpm_keycloak_clientsecret }}"
+  KEYCLOAK_CLIENTID: "{{ .Values.bpm_keycloak_clientid }}"
+  KEYCLOAK_CLIENTSECRET: "{{ .Values.bpm_keycloak_clientsecret }}"
   FORMIO_JWT_SECRET: "{{ .Release.Namespace }}-jwt-secret" 
   FORMIO_ROOT_EMAIL: "{{ .Values.formio_admin_email }}"
   FORMIO_ROOT_PASSWORD: "{{ .Values.formio_admin_password }}"
