--- a/charts/forms-flow-analytics/templates/secret.yaml
+++ b/charts/forms-flow-analytics/templates/secret.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: v1
 kind: Secret
 metadata:
@@ -6,10 +7,12 @@ metadata:
   name: "{{ .Chart.Name }}"
 stringData:
   POSTGRES_HOST_AUTH_METHOD: trust
+  POSTGRES_PASSWORD: "{{ .Values.postgresql.auth.postgresPassword }}"
   PYTHONUNBUFFERED: "0"
   REDASH_COOKIE_SECRET: redash-selfhosted
-  REDASH_DATABASE_URL: "{{ .Values.redash_database_url }}"
-  REDASH_HOST: "{{ tpl .Values.redash_host .}}"
+  REDASH_DATABASE_URL: "{{ .Values.redash.database.url }}"
+  REDASH_DATABASE_PASSWORD: "{{ .Values.redash.database.password }}"
+  REDASH_HOST: "{{ .Values.ingress.url }}"
   REDASH_LOG_LEVEL: INFO
-  REDASH_REDIS_URL: "{{ .Values.redash_redis_url }}"
+  REDASH_REDIS_URL: "redis://redis-exporter:6379/0" # url of the redis database to connect to
   REDASH_SECRET_KEY: redash-selfhosted
