--- a/charts/forms-flow-analytics/Chart.yaml
+++ b/charts/forms-flow-analytics/Chart.yaml
@@ -1,10 +1,11 @@
 ---
 apiVersion: v2
 dependencies:
-  - name: redash-redis
+  - name: redis-exporter
     version: 0.2.0
-  - name: forms-flow-analytics-postgresql
-    version: 0.2.0
+  - name: postgresql
+    repository: https://charts.bitnami.com/bitnami
+    version: 11.1.20
 name: forms-flow-analytics
 tags: forms-flow-analytics
 version: v0.2.0
