--- a/charts/forms-flow-idm/Chart.yaml
+++ b/charts/forms-flow-idm/Chart.yaml
@@ -2,8 +2,7 @@
 apiVersion: v2
 name: forms-flow-idm
 version: v0.2.0
-icon: "https://github.com/cberg-aot/helm-charts/blob/gh-pages/icons/icon.large.png"
 dependencies:
   - name: keycloak
-    version: "14.0.0"
-    repository: "https://codecentric.github.io/helm-charts"
+    version: 7.1.16
+    repository: "https://charts.bitnami.com/bitnami"
