WIP: k8 conversion as single chart - NOT WORKING

--- a/charts/forms-flow-ai/templates/secret.yaml
+++ b/charts/forms-flow-ai/templates/secret.yaml
@@ -5,10 +5,12 @@ metadata:
     app: "{{ .Chart.Name }}"
   name: "{{ .Chart.Name }}"
 stringData:
-  KEYCLOAK_CLIENTID: "{{ .Values.bpm_keycloak_clientid }}"
-  KEYCLOAK_CLIENTSECRET: "{{ .Values.bpm_keycloak_clientsecret }}"
   FORMIO_JWT_SECRET: "{{ .Release.Namespace }}-jwt-secret" 
-  FORMIO_ROOT_EMAIL: "{{ .Values.formio_admin_email }}"
-  FORMIO_ROOT_PASSWORD: "{{ .Values.formio_admin_password }}"
-  WEB_CLIENTID: "{{ .Values.keycloak_web_clientid }}"
-  WEBSOCKET_ENCRYPT_KEY: "{{ tpl .Values.websocket_encrypt_key .}}"
+  FORMIO_ROOT_EMAIL: {{ index .Values "forms-flow-forms" "admin" "email" }}
+  KEYCLOAK_CLIENTID: {{ index .Values "forms-flow-bpm" "clientid" }}
+  KEYCLOAK_CLIENTSECRET: {{ index .Values "forms-flow-bpm" "clientsecret" }}
+  FORMIO_ROOT_PASSWORD: {{ index .Values "forms-flow-forms" "admin" "password" }}
+  MONGODB_URI: "mongodb://{{ .Values.mongodb.auth.usernames | first }}:{{ .Values.mongodb.auth.passwords | first }}@{{ .Values.mongodb.service.nameOverride }}:{{ .Values.mongodb.service.ports.mongodb }}/{{ .Values.mongodb.auth.databases | first }}?replicaSet={{ .Values.mongodb.replicaSetName }}"
+  NODE_CONFIG: '{"mongo":"mongodb://{{ .Values.mongodb.auth.usernames | first }}:{{ .Values.mongodb.auth.passwords | first }}@{{ .Values.mongodb.service.nameOverride }}:{{ .Values.mongodb.service.ports.mongodb }}/{{ .Values.mongodb.auth.databases | first }}?replicaSet={{ .Values.mongodb.replicaSetName }}"}'
+  WEB_CLIENTID: {{ index .Values "forms-flow-web" "clientid"}}
+  WEBSOCKET_ENCRYPT_KEY: "{{.Values.websocket_encrypt_key}}"
