--- a/charts/forms-flow-ai/values.yaml
+++ b/charts/forms-flow-ai/values.yaml
@@ -1,11 +1,58 @@
-bpm_keycloak_clientid: forms-flow-bpm # BPM_CLIENT_ID 
-bpm_keycloak_clientsecret: 786001d6-68a8-4519-903c-bc5b5a870d68 # BPM_CLIENT_SECRET
-camunda_bpm_url: bpm-{{ .Release.Namespace }}.apps.devops.aot-technologies.com # CAMUNDA_API_URI
-formio_url: forms-flow-forms-{{ .Release.Namespace }}.apps.devops.aot-technologies.com # FORMIO_URL 
-formio_admin_email: me@defineme.com # FORMIO_ROOT_EMAIL
-formio_admin_password: admin # FORMIO_ROOT_PASSWORD
-keycloak_realm: forms-flow-ai # KEYCLOAK_URL_REALM 
-keycloak_url: forms-flow-idm-{{ .Release.Namespace }}.apps.devops.aot-technologies.com # KEYCLOAK_URL
-keycloak_web_clientid: forms-flow-web #WEB_CLIENTID 
-web_api_url: webapi-{{ .Release.Namespace }}.apps.devops.aot-technologies.com #WEB_API_BASEURL
-websocket_encrypt_key: FormsFlow.AI#{{ .Release.Namespace }} #WEBSOCKET_ENCRYPT_KEY 
+---
+Domain: "apps.devops.aot-technologies.com"
+websocket_encrypt_key: "FormsFlow.AI"
+forms-flow-analytics:
+  ingress: 
+    enabled: true
+    tls: 
+      hosts: 
+        - "apps.devops.aot-technologies.com"
+forms-flow-bpm:
+  ingress: 
+    enabled: true 
+    tls: 
+      hosts: 
+        - "apps.devops.aot-technologies.com"
+  clientid: "forms-flow-bpm"
+  clientsecret: "786001d6-68a8-4519-903c-bc5b5a870d68"
+forms-flow-forms:
+  ingress: 
+    enabled: true # create an ingress for this component 
+    tls: 
+      hosts: 
+        - "apps.devops.aot-technologies.com"
+  admin:
+    email: "me@defineme.com"
+    password: "admin"
+forms-flow-idm:
+  keycloak:
+    ingress:
+      enabled: true
+      hostname: "forms-flow-idm-formsflow-ai.apps.devops.aot-technologies.com"
+forms-flow-web:
+  clientid: forms-flow-web
+mongodb:
+  arbiter: 
+    containerSecurityContext:
+      enabled: false
+    podSecurityContext:
+      enabled: false
+  architecture: replicaset
+  auth:
+    databases: 
+      - formsflow 
+    passwords:
+      - mongodb
+    usernames:
+      - mongodb
+  containerSecurityContext:
+    enabled: false
+  service:
+    nameOverride: forms-flow-mongodb
+    ports:
+      mongodb: 27017
+  replicaSetName: forms-flow-mongodb
+  podSecurityContext:
+    enabled: false
+
+
