--- a/charts/forms-flow-ai/templates/configmap.yaml
+++ b/charts/forms-flow-ai/templates/configmap.yaml
@@ -4,16 +4,16 @@ kind: ConfigMap
 metadata:
   name: {{ .Chart.Name }}
 data:
-  CAMUNDA_API_URI: "https://{{ tpl .Values.camunda_bpm_url . }}/camunda"
   FORMIO_DEBUG: "formio:*"
   KEYCLOAK_JWT_OIDC_ALGORITHMS: "RS256"
   KEYCLOAK_JWT_OIDC_CACHING_ENABLED: "True"
-  KEYCLOAK_JWT_OIDC_CONFIG: "https://{{ tpl .Values.keycloak_url . }}/auth/realms/{{ .Values.keycloak_realm }}/.well-known/openid-configuration"
-  KEYCLOAK_JWT_OIDC_ISSUER: "https://{{ tpl .Values.keycloak_url . }}/auth/realms/{{ .Values.keycloak_realm }}"
+  KEYCLOAK_JWT_OIDC_CONFIG: "https://$KEYCLOAK_URL/auth/realms/$KEYCLOAK_URL_REALM/.well-known/openid-configuration"
+  KEYCLOAK_JWT_OIDC_ISSUER: "https://$KEYCLOAK_URL/auth/realms/$KEYCLOAK_URL_REALM"
   KEYCLOAK_JWT_OIDC_JWKS_CACHE_TIMEOUT: "300"
-  KEYCLOAK_JWT_OIDC_JWKS_URI: "https://{{ tpl .Values.keycloak_url . }}/auth/realms/{{ .Values.keycloak_realm }}/protocol/openid-connect/certs"
-  KEYCLOAK_TOKEN_URL: "https://{{ tpl .Values.keycloak_url . }}/auth/realms/{{ .Values.keycloak_realm }}/protocol/openid-connect/token"
-  WEB_API_BASE_URL: "https://{{ tpl .Values.web_api_url . }}"
-  KEYCLOAK_URL: "https://{{ tpl .Values.keycloak_url . }}"
-  KEYCLOAK_URL_REALM: "{{ .Values.keycloak_realm }}"
-  FORMIO_URL: "https://{{ tpl .Values.formio_url . }}"
+  KEYCLOAK_JWT_OIDC_JWKS_URI: "https://$KEYCLOAK_URL/auth/realms/$KEYCLOAK_URL_REALM/protocol/openid-connect/certs"
+  KEYCLOAK_TOKEN_URL: "https://$KEYCLOAK_URL/auth/realms/$KEYCLOAK_URL_REALM/protocol/openid-connect/token"
+  KEYCLOAK_URL_REALM: "{{.Chart.Name}}"
+  CAMUNDA_API_URI: "https://forms-flow-bpm-{{.Release.Namespace}}.{{.Values.Domain}}/camunda"
+  KEYCLOAK_URL: "https://forms-flow-idm-{{.Release.Namespace}}.{{.Values.Domain}}"
+  FORMIO_URL: "https://forms-flow-forms-{{.Release.Namespace}}.{{.Values.Domain}}"
+  FORMSFLOW_API_URL: "https://forms-flow-webapi-{{.Release.Namespace}}.{{.Values.Domain}}"
