Refactored -> Last Wip FFWeb

--- a/charts/forms-flow-ai/values.yaml
+++ b/charts/forms-flow-ai/values.yaml
@@ -29,6 +29,7 @@ forms-flow-idm:
     ingress:
       enabled: true
       hostname: "forms-flow-idm-formsflow-ai.apps.devops.aot-technologies.com"
+  realm: forms-flow-ai
 forms-flow-web:
   clientid: forms-flow-web
 mongodb:
