--- a/charts/forms-flow-ai/templates/configmap.yaml
+++ b/charts/forms-flow-ai/templates/configmap.yaml
@@ -4,16 +4,18 @@ kind: ConfigMap
 metadata:
   name: {{ .Chart.Name }}
 data:
-  FORMIO_DEBUG: "formio:*"
+  CAMUNDA_API_URI: "https://forms-flow-bpm-{{.Release.Namespace}}.{{.Values.Domain}}/camunda"
   KEYCLOAK_JWT_OIDC_ALGORITHMS: "RS256"
   KEYCLOAK_JWT_OIDC_CACHING_ENABLED: "True"
-  KEYCLOAK_JWT_OIDC_CONFIG: "https://$KEYCLOAK_URL/auth/realms/$KEYCLOAK_URL_REALM/.well-known/openid-configuration"
-  KEYCLOAK_JWT_OIDC_ISSUER: "https://$KEYCLOAK_URL/auth/realms/$KEYCLOAK_URL_REALM"
   KEYCLOAK_JWT_OIDC_JWKS_CACHE_TIMEOUT: "300"
-  KEYCLOAK_JWT_OIDC_JWKS_URI: "https://$KEYCLOAK_URL/auth/realms/$KEYCLOAK_URL_REALM/protocol/openid-connect/certs"
-  KEYCLOAK_TOKEN_URL: "https://$KEYCLOAK_URL/auth/realms/$KEYCLOAK_URL_REALM/protocol/openid-connect/token"
-  KEYCLOAK_URL_REALM: "{{.Chart.Name}}"
-  CAMUNDA_API_URI: "https://forms-flow-bpm-{{.Release.Namespace}}.{{.Values.Domain}}/camunda"
+  KEYCLOAK_JWT_OIDC_CONFIG: https://{{ index .Values "forms-flow-idm" "keycloak" "ingress" "hostname"  }}/auth/realms/{{ index .Values "forms-flow-idm" "realm" }}/.well-known/openid-configuration
+  KEYCLOAK_JWT_OIDC_ISSUER: https://{{ index .Values "forms-flow-idm" "keycloak" "ingress" "hostname"  }}/auth/realms/{{ index .Values "forms-flow-idm" "realm" }}
+  KEYCLOAK_JWT_OIDC_JWKS_URI: https://{{ index .Values "forms-flow-idm" "keycloak" "ingress" "hostname"  }}/auth/realms/{{ index .Values "forms-flow-idm" "realm" }}/protocol/openid-connect/certs
+  KEYCLOAK_TOKEN_URL: https://forms-flow-idm-{{.Release.Namespace}}.{{.Values.Domain}}/auth/realms/{{ index .Values "forms-flow-idm" "keycloak" "ingress" "hostname"  }}/protocol/openid-connect/token
   KEYCLOAK_URL: "https://forms-flow-idm-{{.Release.Namespace}}.{{.Values.Domain}}"
+  KEYCLOAK_URL_REALM: {{ index .Values "forms-flow-idm" "realm" }}
   FORMIO_URL: "https://forms-flow-forms-{{.Release.Namespace}}.{{.Values.Domain}}"
-  FORMSFLOW_API_URL: "https://forms-flow-webapi-{{.Release.Namespace}}.{{.Values.Domain}}"
+  FORMIO_DOMAIN: "https://forms-flow-forms-{{.Release.Namespace}}.{{.Values.Domain}}"
+  WEB_API_URL: "https://forms-flow-webapi-{{.Release.Namespace}}.{{.Values.Domain}}"
+  MONGODB_URI: "mongodb://{{ .Values.mongodb.auth.usernames | first }}:{{ .Values.mongodb.auth.passwords | first }}@{{ .Values.mongodb.service.nameOverride }}:{{ .Values.mongodb.service.ports.mongodb }}/{{ .Values.mongodb.auth.databases | first }}?replicaSet={{ .Values.mongodb.replicaSetName }}"
+  NODE_CONFIG: '{"mongo":"mongodb://{{ .Values.mongodb.auth.usernames | first }}:{{ .Values.mongodb.auth.passwords | first }}@{{ .Values.mongodb.service.nameOverride }}:{{ .Values.mongodb.service.ports.mongodb }}/{{ .Values.mongodb.auth.databases | first }}?replicaSet={{ .Values.mongodb.replicaSetName }}"}'
