--- a/charts/forms-flow-api/templates/deployment.yaml
+++ b/charts/forms-flow-api/templates/deployment.yaml
@@ -1,5 +1,6 @@
-apiVersion: apps.openshift.io/v1
-kind: DeploymentConfig
+---
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   labels:
     app: "{{ .Chart.Name }}"
@@ -7,17 +8,13 @@ metadata:
 spec:
   replicas: 1
   selector:
-    app: {{ .Chart.Name }}
+    matchLabels:
+      app: "{{ .Chart.Name }}"
   strategy:
-    activeDeadlineSeconds: 21600
-    resources: {}
-    rollingParams:
-      intervalSeconds: 1
+    rollingUpdate:
       maxSurge: 25%
       maxUnavailable: 25%
-      timeoutSeconds: 600
-      updatePeriodSeconds: 1
-    type: Rolling
+    type: RollingUpdate
   template:
     metadata:
       labels:
@@ -27,98 +24,97 @@ spec:
       - env:
         - name: MONGODB_URI
           valueFrom:
-            secretKeyRef:
-              key: MONGO_URL
-              name: "{{ .Values.mongodb_secret_name }}"
+            configMapKeyRef:
+              key: MONGODB_URI
+              name: "{{ .Values.formsflow.configmap }}"
         - name: BPM_API_BASE
           valueFrom:
             configMapKeyRef:
               key: CAMUNDA_API_URI
-              name: "{{ .Values.formsflow_config_name }}"
+              name: "{{ .Values.formsflow.configmap }}"
         - name: BPM_CLIENT_ID
           valueFrom:
             secretKeyRef:
-              key: BPM_CLIENT_ID
-              name: "{{ .Values.formsflow_secret }}"
+              key: KEYCLOAK_CLIENTID
+              name: "{{ .Values.formsflow.secret }}"
         - name: BPM_CLIENT_SECRET
           valueFrom:
             secretKeyRef:
-              key: BPM_CLIENT_SECRET
-              name: "{{ .Values.formsflow_secret }}"
+              key: KEYCLOAK_CLIENTSECRET
+              name: "{{ .Values.formsflow.secret }}"
         - name: BPM_TOKEN_API
           valueFrom:
             configMapKeyRef:
               key: KEYCLOAK_TOKEN_URL
-              name: "{{ .Values.formsflow_config_name }}"
+              name: "{{ .Values.formsflow.configmap }}"
         - name: DATABASE_URL
           valueFrom:
-            secretKeyRef:
+            configMapKeyRef:
               key: DATABASE_URL
-              name: "{{ .Values.webapi_db_resource_name }}"
+              name: "{{ .Chart.Name }}"
         - name: JWT_OIDC_ALGORITHMS
           valueFrom:
             configMapKeyRef:
               key: KEYCLOAK_JWT_OIDC_ALGORITHMS
-              name: "{{ .Values.formsflow_config_name }}"
+              name: "{{ .Values.formsflow.configmap }}"
         - name: JWT_OIDC_AUDIENCE
           valueFrom:
             secretKeyRef:
               key: WEB_CLIENTID
-              name: "{{ .Values.formsflow_secret }}"
+              name: "{{ .Values.formsflow.secret }}"
         - name: JWT_OIDC_CACHING_ENABLED
           valueFrom:
             configMapKeyRef:
               key: KEYCLOAK_JWT_OIDC_CACHING_ENABLED
-              name: "{{ .Values.formsflow_config_name }}"
+              name: "{{ .Values.formsflow.configmap }}"
         - name: JWT_OIDC_ISSUER
           valueFrom:
             configMapKeyRef:
               key: KEYCLOAK_JWT_OIDC_ISSUER
-              name: "{{ .Values.formsflow_config_name }}"
+              name: "{{ .Values.formsflow.configmap }}"
         - name: JWT_OIDC_JWKS_CACHE_TIMEOUT
           valueFrom:
             configMapKeyRef:
               key: KEYCLOAK_JWT_OIDC_JWKS_CACHE_TIMEOUT
-              name: "{{ .Values.formsflow_config_name }}"
+              name: "{{ .Values.formsflow.configmap }}"
         - name: JWT_OIDC_JWKS_URI
           valueFrom:
             configMapKeyRef:
               key: KEYCLOAK_JWT_OIDC_JWKS_URI
-              name: "{{ .Values.formsflow_config_name }}"
+              name: "{{ .Values.formsflow.configmap }}"
         - name: JWT_OIDC_WELL_KNOWN_CONFIG
           valueFrom:
             configMapKeyRef:
               key: KEYCLOAK_JWT_OIDC_CONFIG
-              name: "{{ .Values.formsflow_config_name }}"
+              name: "{{ .Values.formsflow.configmap }}"
         - name: KEYCLOAK_URL
           valueFrom:
             configMapKeyRef:
               key: KEYCLOAK_URL
-              name: "{{ .Values.formsflow_config_name }}"
+              name: "{{ .Values.formsflow.configmap }}"
         - name: WEB_API_BASE_URL
           valueFrom:
             configMapKeyRef:
-              key: WEB_API_BASE_URL
-              name: "{{ .Values.formsflow_config_name }}"
+              key: WEB_API_URL
+              name: "{{ .Values.formsflow.configmap }}"
         - name: KEYCLOAK_URL_REALM
           valueFrom:
             configMapKeyRef:
               key: KEYCLOAK_URL_REALM
-              name: "{{ .Values.formsflow_config_name }}"
+              name: "{{ .Values.formsflow.configmap }}"
         - name: FORMSFLOW_API_CORS_ORIGINS
           value: '*'
-        image: "{{ tpl .Values.image_url . }}:{{ .Values.tag_name }}"
+        image: "{{ .Values.image.registry }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         name: "{{ .Chart.Name }}"
         ports:
-        - containerPort: 5000
+        - containerPort: {{ .Values.ingress.port }}
         resources:
           limits:
-            cpu: "{{ .Values.cpu_limit }}"
-            memory: "{{ .Values.memory_limit }}"
+            cpu: "{{ .Values.resources.limits.cpu }}"
+            memory: "{{ .Values.resources.limits.memory }}"
           requests:
-            cpu: "{{ .Values.cpu_request }}"
-            memory: "{{ .Values.memory_request }}"
+            cpu: "{{ .Values.resources.requests.cpu }}"
+            memory: "{{ .Values.resources.requests.memory }}"
         stdin: true
         tty: true
       restartPolicy: Always
-  test: false
