--- a/charts/forms-flow-api/templates/service.yaml
+++ b/charts/forms-flow-api/templates/service.yaml
@@ -4,8 +4,9 @@ metadata:
   name: "{{ .Chart.Name }}"
 spec:
   ports:
-  - port: 5000
+  - name: "{{ .Chart.Name }}"
+    port: {{ .Values.ingress.port }}
     protocol: TCP
-    targetPort: 5000
+    targetPort: {{ .Values.ingress.port }}
   selector:
     app: "{{ .Chart.Name }}"
