--- a/charts/forms-flow-bpm/templates/service.yaml
+++ b/charts/forms-flow-bpm/templates/service.yaml
@@ -6,7 +6,7 @@ metadata:
   name: {{ .Chart.Name }}
 spec:
   ports:
-  - name: "{{.Values.ingress.port}}"
+  - name: {{ .Chart.Name }}
     port: {{.Values.ingress.port}}
     targetPort: {{.Values.ingress.port}}
   selector:
