--- a/charts/forms-flow-ai/templates/secret.yaml
+++ b/charts/forms-flow-ai/templates/secret.yaml
@@ -5,6 +5,8 @@ metadata:
     app: "{{ .Chart.Name }}"
   name: "{{ .Chart.Name }}"
 stringData:
+  BPM_CLIENT_ID: {{ index .Values "forms-flow-bpm" "clientid" }}
+  BPM_CLIENT_SECRET: {{ index .Values "forms-flow-bpm" "clientsecret" }}
   FORMIO_ROOT_EMAIL: {{ index .Values "forms-flow-forms" "admin" "email" }}
   FORMIO_ROOT_PASSWORD: {{ index .Values "forms-flow-forms" "admin" "password" }}
   FORMIO_JWT_SECRET: "{{ .Release.Namespace }}-jwt-secret" 
@@ -12,3 +14,5 @@ stringData:
   KEYCLOAK_CLIENTSECRET: {{ index .Values "forms-flow-bpm" "clientsecret" }}
   WEB_CLIENTID: {{ index .Values "forms-flow-web" "clientid"}}
   WEBSOCKET_ENCRYPT_KEY: "{{.Values.websocket_encrypt_key}}"
+  ADMIN_WEB_CLIENTID: {{ index .Values "forms-flow-web" "clientid"}}
+  INSIGHT_API_KEY: ""
