--- a/charts/forms-flow-api/templates/deployment.yaml
+++ b/charts/forms-flow-api/templates/deployment.yaml
@@ -102,6 +102,27 @@ spec:
             configMapKeyRef:
               key: KEYCLOAK_URL_REALM
               name: "{{ .Values.formsflow.configmap }}"
+        - name: INSIGHT_API_URL
+          valueFrom:
+            configMapKeyRef:
+              key: INSIGHT_API_URL
+              name: "{{ .Values.formsflow.configmap }}"
+        - name: INSIGHT_API_KEY
+          valueFrom:
+            secretKeyRef:
+              key: REDASH_SECRET_KEY
+              name: "{{ .Values.formsflow.analytics }}"
+        - name: KEYCLOAK_ENABLE_CLIENT_AUTH
+          valueFrom:
+            configMapKeyRef:
+              key: KEYCLOAK_ENABLE_CLIENT_AUTH
+              name: "{{ .Values.formsflow.configmap }}"
+        - name: MULTI_TENANCY_ENABLED
+          valueFrom:
+            configMapKeyRef:
+              key: MULTI_TENANCY_ENABLED
+              name: "{{ .Values.formsflow.configmap }}"
+
         - name: FORMSFLOW_API_CORS_ORIGINS
           value: '*'
         image: "{{ .Values.image.registry }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
