--- a/charts/forms-flow-api/values.yaml
+++ b/charts/forms-flow-api/values.yaml
@@ -1,5 +1,5 @@
 ---
-Domain: "apps.devops.aot-technologies.com"
+Domain: "apps.gitops.aot-technologies.com"
 resources:
   limits:
     cpu: 600m
@@ -10,7 +10,8 @@ resources:
 
 formsflow:
   configmap: forms-flow-ai # name of formsflow.ai configmap
-  secret: forms-flow-ai #name of formsflow.ai secret 
+  secret: forms-flow-ai #name of formsflow.ai secret
+  analytics: forms-flow-analytics
 ingress: 
   enabled: true # create an ingress for this component 
   port: 5000
