--- a/charts/forms-flow-forms/values.yaml
+++ b/charts/forms-flow-forms/values.yaml
@@ -1,4 +1,4 @@
-Domain: "apps.devops.aot-technologies.com"
+Domain: "apps.gitops.aot-technologies.com"
 admin:
   email: "me@defineme.com"
   password: "admin"
