Silver cluster changes

--- a/charts/forms-flow-analytics/values.yaml
+++ b/charts/forms-flow-analytics/values.yaml
@@ -1,4 +1,4 @@
-Domain: "apps.gitops.aot-technologies.com"
+Domain: "apps.silver.devops.gov.bc.ca"
 ingress: 
   enabled: true # create an ingress for this component 
   port: 5000
@@ -19,7 +19,7 @@ postgresql:
       enabled: false
     persistence:
       mountPath: /var/lib/pgsql/data
-      storageClass: nfs-client 
+      storageClass: netapp-file-standard 
       size: 1Gi 
     podSecurityContext:
       enabled: false
@@ -46,7 +46,7 @@ redisExporter:
       tag: 7.0-rc3-alpine
   persistentVolumeClaim:
     size: 2Gi # storage class name 
-    storageClass: nfs-client # pvc request size
+    storageClass: netapp-file-standard # pvc request size
   resources:
     limits:
       cpu: 60m
