--- a/charts/forms-flow-analytics/charts/redis-exporter/values.yaml
+++ b/charts/forms-flow-analytics/charts/redis-exporter/values.yaml
@@ -11,7 +11,7 @@ redis:
 
 persistentVolumeClaim:
   size: 2Gi # storage class name 
-  storageClass: nfs-client # pvc request size
+  storageClass: netapp-file-standard # pvc request size
 resources:
   limits:
     cpu: 60m
