--- a/charts/forms-flow-idm/values.yaml
+++ b/charts/forms-flow-idm/values.yaml
@@ -46,7 +46,7 @@ keycloak:
         enabled: false
       persistence:
         mountPath: /var/lib/pgsql/data
-        storageClass: nfs-client 
+        storageClass: netapp-file-standard 
         size: 2Gi 
       podSecurityContext:
         enabled: false
@@ -83,7 +83,7 @@ keycloak:
     enabled: true
     extraTls:
       - {}
-    hostname: "forms-flow-idm-formsflow-ai.apps.gitops.aot-technologies.com"
+    hostname: "keycloak.apps.silver.devops.gov.bc.ca"
     path: /auth
     pathType: Prefix
     servicePort: http
